# Estate-Ledger

./: CHANGELOG.md  Estate-ledger.cabal  README.md  readme.txt
Base-Contracts/GovernanceContract/: GovernanceContract.json  GovernanceContract.md  MarloweTokenContract.txt  TokenContract.json
Base-Contracts/LandAquisitionContract/: LandAQS.hs  LandAquisitionContract.md  land_acquisitionContract.json  land_acquistion.txt
Base-Contracts/LandDevelopmentContract/: LandDevelopmentContract.hs
Base-Contracts/ProfitDistributionContract/: MarloweProfitDistributionContract.txt  ProfitDistribution.hs  ProfitDistributionContract.json  ProfitDistributionContract.md
Base-Contracts/PropertyDevelopementContract/: PropertyDevelopementContract.json  PropertyDevelopementContract.md  property_development.hs
Base-Contracts/TokenContract/: TokenContractHaskellCode.hs
Base-Contracts/TradingContract/: TradingContract.md  tradingContract.hs
Derivative-Contracts/: DerivativeContract.json  DerivativeContract.md  MarloweDerivativeContract.txt
app/: Commercial_Activities_Contract.hs  Governance_Contract.hs  Land_Acquisition_Contract.hs  Land_Development_Contract.hs  Land_Info.hs  Main.hs  Profit_Distribution_Contract.hs  Sales_Contract.hs  Tokenization_Contract.hs  Upgrade_Contract.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
